--- a/src/components/MainView/MainView.css
+++ b/src/components/MainView/MainView.css
@@ -40,3 +40,11 @@
     -webkit-line-clamp:5; 
     overflow:hidden; 
 }
+
+.ant-switch.ant-switch-small.ant-switch-checked {
+    background-color: rgba(222, 184, 135, 0.75);
+}
+
+.ant-switch.ant-switch-small{
+    background-color: rgba(225, 0, 0, 0.25);
+}
