--- a/src/components/DetailText/DetailText.css
+++ b/src/components/DetailText/DetailText.css
@@ -3,3 +3,20 @@
 a {
     color: #7f8081;
 }
+
+.ant-row.text-box {
+    height: 55%;
+    overflow: hidden;
+}
+
+#detail-text .textbox .ant-col {
+    padding: 10px
+}
+
+#detail-text .titlebox .ant-col {
+    padding: 5px 10px 0px 10px
+}
+#detail-text .footbox .ant-col {
+    padding-top: 5px;
+    text-align: center;
+}
