刷选自动触发/热榜大小更改

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,10 @@
 
 .ant-row:first-child {
     height: 58%;
+    overflow: hidden;
 }
 .ant-row:last-child {
-    height: 40%;
+    height: 41%;
     overflow: hidden;
 }
 
