主视图颜色修改

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,8 @@
 }
 
 .content {
-    background: #ffffff;
+    background: #3a3a38;
     height: 100%;
     margin: 5px 2px;
+    color: white;
 }
