--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -1,10 +1,10 @@
 #top-bar {
     width: 100%;
     height: 25px;
-    border-bottom: 1px solid #e5e9f2;
+    border-bottom: 1px solid #333333;
 }
 
 #top-title{
     margin-left: 10px;
-    color: black;
+    color: white;
 }
