--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -1,7 +1,7 @@
 #top-bar {
     width: 100%;
     height: 25px;
-    border-bottom: 1px solid #333333;
+    border-bottom: 1px solid #2c2c2c;
 }
 
 #top-title{
