--- a/src/components/HotRank/HotRank.css
+++ b/src/components/HotRank/HotRank.css
@@ -27,7 +27,7 @@
 .rank-title {
     text-align: center;
     font-size: 15px;
-    font-weight: bold;
+    /* font-weight: bold; */
     padding: 0;
     color: white;
 }
